--- a/poke/src/index.css
+++ b/poke/src/index.css
@@ -2,9 +2,14 @@ body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+    sans-serif, 'Pokemon Hollow';
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+}
+
+@font-face {
+  font-family: 'MyFont';
+  src: local('MyFont'), url('../Pokemon Solid.ttf') format('truetype');
 }
 
 code {
